Fusion-Qa-Final/src/objects/OrderItem.object
<CustomObject>
    <fields>
        <fullName>OSF_DWback__DW_ID__c</fullName>
        <externalId>true</externalId>
        <label>Commerce Cloud Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OSF_DWback__Demandware_Bonus_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Commerce Cloud Bonus Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Demandware_Campaign_Name__c</fullName>
        <label>Commerce Cloud Campaign Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Demandware_Coupon_Code__c</fullName>
        <label>Commerce Cloud Coupon Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Demandware_Discount__c</fullName>
        <label>Commerce Cloud Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Demandware_Size__c</fullName>
        <label>Commerce Cloud Size</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OSF_DWback__Demandware_Total_price__c</fullName>
        <formula>(UnitPrice * Quantity) - (UnitPrice * Quantity)* OSF_DWback__Demandware_Discount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
</CustomObject>